// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelationshipArray Correctly builds grid url: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BRow> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BButton",
    "variant="primary"",
    "class="mr-1 text-nowrap flex-shrink-0"",
    "onClick=fn<bound openCreateModal>",
    " ...",
    ">",
    "
",
    " at <BCol",
    "md="6"",
    ">",
    "
",
    " at <BRow>",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (3)",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) vm.$on/$once/$off() have been removed. Use an external event emitter library instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/events-api.html",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BTable> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) Detected conflicting key "bvListeners" when merging data option values. In Vue 3, data keys are merged shallowly and will override one another.
  Details: https://v3-migration.vuejs.org/breaking-changes/data-option.html#mixin-merge-behavior-change",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (2)",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (4)",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (2)",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (3)",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BTr> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (5)",
    "
",
    " at <BTableCell",
    "colspan=null",
    ">",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (3)",
    "
",
    " at <BTableCell",
    "colspan=null",
    ">",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BTableCell",
    "colspan=null",
    ">",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (4)",
    "
",
    " at <BTableCell",
    "colspan=null",
    ">",
    "
",
    " at <BTr",
    "class="b-table-empty-row"",
    "key="b-empty-row"",
    ">",
    "
",
    " at <BTbody",
    "class=null",
    "tbodyTransitionHandlers=undefined",
    "tbodyTransitionProps=undefined",
    " ...",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <Pagination",
    "key=0",
    "value=1",
    "align="center"",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (6)",
    "
",
    " at <BPagination",
    "class="m-0 pagination-buttons"",
    "id="pagination"",
    "tabindex="0"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=0",
    "value=1",
    "align="center"",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (5)",
    "
",
    " at <BPagination",
    "class="m-0 pagination-buttons"",
    "id="pagination"",
    "tabindex="0"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=0",
    "value=1",
    "align="center"",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (7)",
    "
",
    " at <BModal",
    "cancel-variant="link"",
    "id="create_reports_modal"",
    "ok-disabled=true",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (2)",
    "
",
    " at <BModal",
    "cancel-variant="link"",
    "id="create_reports_modal"",
    "ok-disabled=true",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) (2)",
  ],
]
`;

exports[`RelationshipArray Correctly sets columns: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) v-model usage on component has changed in Vue 3. Component that expects to work with v-model should now use the "modelValue" prop and emit the "update:modelValue" event. You can update the usage and then opt-in to Vue 3 behavior on a per-component basis with \`compatConfig: { COMPONENT_V_MODEL: false }\`.
  Details: https://v3-migration.vuejs.org/breaking-changes/v-model.html",
    "
",
    " at <BFormCheckbox",
    "class="pl-3"",
    "disabled=""",
    "modelValue=false",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (8)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (4)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (6)",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (9)",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (5)",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (6)",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (7)",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BTh> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (10)",
    "
",
    " at <BFormCheckbox",
    "class="pl-3"",
    "disabled=""",
    "checked=false",
    " ...",
    ">",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (8)",
    "
",
    " at <BFormCheckbox",
    "class="pl-3"",
    "disabled=""",
    "checked=false",
    " ...",
    ">",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BFormCheckbox> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BFormCheckbox",
    "class="pl-3"",
    "disabled=""",
    "checked=false",
    " ...",
    ">",
    "
",
    " at <BTh",
    "class="checkbox-column"",
    "variant=undefined",
    "stickyColumn=undefined",
    " ...",
    ">",
    "
",
    " at <BTr",
    "class=undefined",
    "variant=undefined",
    ">",
    "
",
    " at <BThead",
    "class=null",
    "headVariant=null",
    "key="bv-thead"",
    ">",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "relationshipGrantTemporalConstraintsEnforced": false,
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`RelationshipArray Correctly sets gridData: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (7)",
    "
",
    " at <BTable",
    "hover=""",
    "ref="relationshipArrayGrid"",
    "responsive=""",
    " ...",
    ">",
    "
",
    " at <RelationshipArray",
    "parentId="bjensen"",
    "parentResource="user"",
    "relationshipArrayProperty=",
    {
      "items": {
        "resourceCollection": [
          {
            "conditionalAssociation": true,
            "label": "User",
            "notify": true,
            "path": "managed/user",
            "query": {
              "fields": [
                "userName",
                "givenName",
                "sn",
              ],
              "queryFilter": "true",
            },
          },
        ],
      },
      "propName": "reports",
      "title": "Reports",
    },
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
